syntax = "proto3";

import "google/api/annotations.proto";

package galactica.merkle;

option go_package = "github.com/Galactica-corp/merkle-proof-service/gen/galactica/merkle";

// Query defines the gRPC querier service.
service Query {
  // Proof queries the proof of a leaf in the merkle tree.
  rpc Proof (QueryProofRequest) returns (QueryProofResponse) {
    option (google.api.http).get = "/v1/galactica/merkle/proof/{registry}/{leaf}";
  }

  // GetEmptyLeafProof queries the proof of the any empty leaf in the merkle tree.
  rpc GetEmptyLeafProof (GetEmptyLeafProofRequest) returns (GetEmptyLeafProofResponse) {
    option (google.api.http).get = "/v1/galactica/merkle/empty_proof/{registry}";
  }

  // GetBatchProofs queries proofs for a batch of additions or revocations.
  rpc GetBatchProofs (QueryBatchProofsRequest) returns (QueryBatchProofsResponse) {
    option (google.api.http).post = "/v1/galactica/merkle/batch_proofs/{registry}";
    option (google.api.http).body = "*";
  }
}

// QueryProofRequest is the request type for the Query.Proof method.
message QueryProofRequest {
  // registry  is the ZkCertificateRegistry hex address, which starts with 0x.
  string registry = 1;

  // leaf is the leaf uint256 value.
  string leaf = 2;
}

// QueryProofResponse is the response type for the Query.Proof method.
message QueryProofResponse {
  // proof is the merkle proof.
  Proof proof = 1;
}

// GetEmptyLeafProofRequest is the request type for the Query.GetEmptyLeafProof method.
message GetEmptyLeafProofRequest {
  // registry is the ZkCertificateRegistry hex address, which starts with 0x.
  string registry = 1;
}

// GetEmptyIndexResponse is the response type for the Query.GetEmptyLeafProof method.
message GetEmptyLeafProofResponse {
  // proof is the merkle proof of the empty leaf.
  Proof proof = 1;
}

// Proof is the merkle proof.
message Proof {
  // leaf is the leaf value encoded as a string containing the uint256 value.
  string leaf = 1;

  // path is the merkle proof path, encoded as a string containing the uint256 values.
  repeated string path = 2;

  // index is the leaf index.
  uint32 index = 3;

  // root is the merkle root, value encoded as a string containing the uint256 value.
  string root = 4;
}

// QueryBatchProofsRequest is the request type for the Query.GetBatchProofs method.
message QueryBatchProofsRequest {
  // registry is the ZkCertificateRegistry hex address, which starts with 0x.
  string registry = 1;
  
  // operations is the list of batch operations to process.
  repeated BatchOperation operations = 2;
}

// BatchOperation represents a single operation in the batch.
message BatchOperation {
  // leaf_hash is the leaf hash (uint256 string).
  string leaf_hash = 1;
  
  // is_addition indicates if this is an addition (true) or revocation (false).
  bool is_addition = 2;
}

// QueryBatchProofsResponse is the response type for the Query.GetBatchProofs method.
message QueryBatchProofsResponse {
  // initial_root is the merkle root before the batch operations.
  string initial_root = 1;
  
  // proofs is the list of batch proofs.
  repeated BatchProof proofs = 2;
}

// BatchProof represents a proof in the batch.
message BatchProof {
  // index is the leaf index.
  uint32 index = 1;
  
  // path is the proof siblings (uint256 strings).
  repeated string path = 2;
}
